# planc

./: .gitignore  CMakeLists.txt  README.md  datasets.md  papers.md  testcases.md
common/: distutils.h  distutils.hpp  jointnmf.hpp  luc.hpp  ncpfactors.hpp  nmf.hpp  npyio.hpp  ntf_utils.h  ntf_utils.hpp  parsecommandline.h  parsecommandline.hpp  stacktrace.h  tensor.hpp  utils.h  utils.hpp
common/cmake_aux/: NMFLIB_FindARMA.cmake
conf/: nvblas_cuda75.conf  nvblas_cuda91.conf
dimtree/: ddt.hpp  ddttensor.h  ddttensor.hpp  dimtrees.h  dimtrees.hpp  kdttensor.h  kdttensor.hpp  kobydt.hpp
distjointnmf/: CMakeLists.txt  README.md  distanlsbppjnmf.hpp  distjnmftime.hpp  distjointnmf.cpp  distjointnmf.hpp  distjointnmf_driver.hpp  distjointnmfio.hpp  distpgdjnmf.hpp  distpgncgjnmf.hpp  jnmfmpicomm.hpp
distnmf/: CMakeLists.txt  README.md  aunmf.hpp  distals.hpp  distanlsbpp.hpp  distaoadmm.hpp  distgnsymnmf.hpp  disthals.hpp  distio.hpp  distmu.hpp  distnmf.cpp  distnmf.hpp  distnmf1D.hpp  distnmftime.hpp  distr2.hpp  distutils.h  mpicomm.hpp  naiveanlsbpp.hpp
distntf/: CMakeLists.txt  README.md  distauntf.hpp  distntf.cpp  distntfanlsbpp.hpp  distntfaoadmm.hpp  distntfcpals.hpp  distntfhals.hpp  distntfio.hpp  distntfmpicomm.hpp  distntfmu.hpp  distntfnes.hpp  distntftime.hpp  distntfutils.h  testcases.md
formatter/: google_clang_format
hiernmf/: CMakeLists.txt  README.md  hiernmf.cpp  matutils.hpp  node.hpp
jointnmf/: CMakeLists.txt  README.md  anlsbppjnmf.hpp  jointnmf.cpp  jointnmf_driver.hpp  pgdjnmf.hpp  pgncgjnmf.hpp
latex/: .gitignore
latex/icpp18/: .gitignore  abstract.tex  algorithm.tex  aunmf.tex  conclusion.tex  distspnmf-reproducibility-ae.tex  experiments.tex  icpp18.tex  introduction.tex  mybib.bib
latex/sc17/: abstract.tex  algorithm.tex  distspnmf-reproducibility-ae.tex  experiments.tex  introduction.tex  mybib.bib  notations.tex  prelim.tex  ramkidefns.sty  spdistnmfsc17.tex  survey.tex
latex/sc18/: .gitignore  abstract.tex  algorithm.tex  appendix.tex  conclusion.tex  experiments.tex  introduction.tex  ourmacros.sty  paper.bib  paper.tex  plots.tex  prelims.tex  survey.tex
latex/sc18/fig/: AlgAG.tex  AlgMTTKRP.tex  Alg_header.tex  cpdecomposition.pptx  dim_tree.tex  dimtree.pptx
latex/slides/: ourmacros.sty  talk.tex
latex/slides/CSAIL-workshop19/: slides.bib  talk.tex  tensor_header.tex
latex/slides/SIAM-ALA18/: local.bib  talk.tex
latex/slides/SIAM-ALA18/fig/: modeled.tex  plots.tex
latex/slides/Sandia-LDRD-pres/: talk.tex
latex/toms/: abstract.tex  ack.tex  algorithm.tex  appendix.tex  aunmf.tex  bio.tex  conclusion.tex  differences.tex  experiments.tex  introduction.tex  mybib.bib  ourmacros.sty  paper.bib  paper.tex  plots.tex  prelim.tex  prelims.tex  qualityplots.tex  ramkidefns.sty  software.tex  stackxchangetopics.tex  supplement.tex  survey.tex  vary_proc_grid.tex
latex/toms/data/: accuracylr16pksweep.csv  accuracylr81pksweep.csv  accuracylr81pksweep_nesterov20_cpu.csv  accuracylr81pksweep_nesterov20_gpu.csv  accuracyuni16pksweep.csv  accuracyuni81pksweep.csv  comm_sweep_scale.csv  comm_sweep_scale_pg.csv  luclr16pksweep.csv  luclr81pksweep.csv  luclr81pksweep_nesterov20.csv  lucmousep64ksweep.csv  lucmousep64ksweep_nesterov20.csv  lucrwp64ksweep.csv  lucrwp64ksweep_nesterov20.csv  lucuni16pksweep.csv  lucuni81pksweep.csv  temp.csv  timebreakdown.py  tomsplots.ipynb  wk_3D_syn2_scale.csv  wk_3D_syn_64_scale.csv  wk_3D_syn_scale.csv
latex/toms/fig/: 1D-distribution.tex  2D-distribution.tex  AlgNLS.tex  AlgRS.tex  AlgStart.tex  cp.pptx  cpdecomposition.pptx  naive-distribution.tex
latex/toms/mouse/: process_mouse_data.m  visualize_mouse_data.m
latex/toms/mouse/csv_files/: mouse_output_abpp_12_lambda_64.csv  mouse_output_abpp_12_mode0_64.csv  mouse_output_abpp_12_mode1_64.csv  mouse_output_abpp_12_mode2_64.csv  mouse_output_abpp_12_mode3_64.csv  mouse_output_abpp_16_lambda_64.csv  mouse_output_abpp_16_mode0_64.csv  (+44 more)
latex/toms/tikz/: .gitignore
mpi/: .gitignore  CMakeLists.txt  README.md  aunmf.hpp  conv-mat-to-ss.py  distanlsbpp.hpp  distaoadmm.hpp  disthals.hpp  distio.hpp  distmu.hpp  distnmf.cpp  distnmf.hpp  distnmf1D.hpp  distnmftime.hpp  distutils.h  distutils.hpp  eos.sh  mpicomm.hpp  naiveanlsbpp.hpp  partition-uniform.cpp
nmf/: CMakeLists.txt  README.md  aoadmm.hpp  bppnmf.hpp  gnsym.hpp  hals.hpp  mu.hpp  nmf.cpp  sampletest.cpp
nnls/: ActiveSetNNLS.h  ActiveSetNNLS.hpp  SortBooleanMatrix.hpp  bppnnls.hpp  nnls.hpp
ntf/: CMakeLists.txt  README.md  auntf.hpp  luc.hpp  mttkrp_test.cpp  ncpfactors.hpp  ntf.cpp  ntf_utils.h  ntf_utils.hpp  ntfanlsbpp.hpp  ntfaoadmm.hpp  ntfhals.hpp  ntfmu.hpp  ntfnes.hpp  tensor.hpp  updatealgos.hpp
openmp/: CMakeLists.txt  README.md  bppnmf.hpp  hals.hpp  mu.hpp  nmf.cpp  sampletest.cpp
pacoss/: Makefile  Makefile.inc.crunch  Makefile.inc.oguz  Makefile.inc.tmp  README.md
pacoss/dat/test/: test1-0.idx  test1-0.out  test1-0.part  test1-1.idx  test1-1.out  test1-1.part  test1-2.idx  test1-2.out  test1-2.part
pacoss/src/: cpp-utils.cpp  cpp-utils.h  keyvalsorter.h  pacoss-common.h  pacoss-communicator.cpp  pacoss-communicator.h  pacoss-cpp-libs.h  pacoss-partitioner.cpp  pacoss-partitioner.h  pacoss-sparse-struct.cpp  pacoss-sparse-struct.h  pacoss.h
pacoss/src/exe/: pacoss.cpp
pacoss/src/test/: test-pacoss-communicator.cpp  test-ttv.cpp
sc17/: plots.tex  rebuttal.txt
test/: cart_product.cpp  matlabarmautils.hpp  matlabvsarma.cpp  mexcommands.md  test.m  testcscmm.cpp  testcsrmm.cpp  testmm.cpp
test_data/: tiny_imagenet_to_numpy.ipynb
tmpi/: Makefile  Makefile.inc.tmp
tmpi/src/: mpi-backup.hb  tmpi.cpp  tmpi.h
tmpi/src/test/: tmpi_test.cpp
utilities/: README.md  SplitFiles.cpp  buildsplitfiles.sh  partition-uniform.cpp  permute-sparse-struct.cpp  processstackexchange.txt  py2mpiio.cpp  shufflesparsemm.py  splitfiles.sh  splitfiles2d.sh
utilities/partitioner/: check_symm.py  planc_benchmark.py  planc_output_convert.py  planc_partitioner.py  run_config.py  run_partitioner.py
utilities/partitioner/configs/: bench_configs.json  planc_config.json
